--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&display=swap');
-*{
-    font-family: "Familjen Grotesk";
-}
+
 body {
     background-color: #D6BD98;
     box-sizing: border-box;
@@ -33,4 +31,117 @@ body {
     flex-direction: column;
     justify-content: center;
     gap: 1.25rem;
+}
+
+.container__child__rightbox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1.5rem;
+}
+
+.container__child__rectangle {
+    width: 22rem;
+    height: 45rem;
+    background-color: #fff;
+    border-radius: 2rem;
+    box-shadow: 0.2rem 0.2rem 0.2rem #3a3a3a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    gap: 2rem;
+    justify-content: space-between;
+}
+
+.container__child__title {
+    font-size: 3rem;
+    color: #1A3636;
+}
+
+.container__child__titleboxandtext {
+    gap: 5rem;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.caret {
+    background-color: #1A3636;
+    width: 0.4rem;
+    height: 2.5rem;
+    animation: blink 1.25s infinite;
+}
+
+@keyframes blink {
+    0%, 100% {
+        background-color: transparent;
+    }
+    50% {
+        background-attachment: #1A3636;
+    }
+}
+
+.container__child__titlebox {
+    align-items: center;
+    display: flex;
+}
+
+.container__child__input {
+    font-size: 1.6rem;
+    color: #1A3636;
+    background-color: transparent;
+    font-family: "Familjen Grotesk";
+    outline: none;
+    border: none;
+    resize: none;
+    padding: 1rem;
+    height: 20rem;
+}
+
+.container__child__output {
+    word-break: break-word;
+    visibility: hidden;
+    overflow-y: hidden;
+    overflow-y: scroll;
+    font-size: 1.3rem;
+    text-align: left;
+    margin-right: auto;
+    width: 100%;
+    padding-right: 3%;
+    box-sizing: border-box;
+}
+
+.container__child__btns {
+    color: black;
+    justify-content: center;
+    gap: 3.125rem;
+    display: flex;
+}
+
+.container__child__texts {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.container__child__text1 {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+.container__child__text2 {
+    font-size: 0.7rem;
+}
+
+.container__child__instruction {
+    color: #1A3636;
+    font-size: 0.8rem;
+}
+
+.mag-bear {
+    height: 15.5rem;
+    width: 13.563rem;
 }
