--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,168 @@ body {
     height: 15.5rem;
     width: 13.563rem;
 }
+
+.container__child__copybtn {
+    width: 13.25rem;
+    height: 4.563rem;
+    font-size: 1.25rem;
+    background-color: white;
+    border-radius: 24px;
+    border: 3px #1A3636;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.site__info {
+    display: flex;
+    flex-direction: row;
+    gap: 0.3rem;
+    justify-content: center;
+    align-items: center;
+    font-family: "Familjen Grotesk";
+}
+
+.devby {
+    background-color: transparent;
+    text-decoration: none;
+    color: #1A3636;
+}
+
+.raniel {
+    background-color: transparent;
+    text-decoration: none;
+    color: #1A3636;
+}
+
+.githublogo {
+    height: 2rem;
+    width: 2rem;
+}
+
+@media (max-height: 768px) {
+    .container {
+        padding: 2.5% 10%;
+    }
+    
+    .container__child__leftbox,
+    .container__child__rightbox {
+        gap: 4rem;
+    }
+
+    .container__child__rectangle {
+        width: 18rem;
+        height: 30rem;
+        padding: 1.5rem;
+    }
+
+    .container__child__input {
+        height: 12rem;
+    }
+
+    .container__child__title {
+        font-size: 2.5rem;
+    }
+
+    .container__child__btn {
+        width: 10rem;
+        height: 2.5rem;
+        font-size: 1rem;
+    }
+
+    .mag-bear {
+        height: 18rem;
+        width: 13rem;
+    }
+
+    .container__child__titleboxandtext {
+        gap: 3rem;
+    }
+
+    .container__child__btns {
+        gap: 2.5rem;
+    }
+
+    .container__child__texts {
+        gap: 1rem;
+      }
+    
+      .container__child__text1 {
+        font-size: 1.2rem;
+      }
+    
+      .container__child__text2 {
+        font-size: 0.6rem;
+      }
+
+      .container__child__rule {
+        font-size: 0.7rem;
+      }
+    
+      .container__child__copybtn {
+        width: 10rem;
+        height: 2.5rem;
+        font-size: 1rem;
+      }
+    
+      .site__info {
+        gap: 0.2rem;
+        font-size: 0.7rem; 
+      }
+    
+      .githublogo {
+        height: 1.5rem;
+        width: 1.5rem;
+      }
+}
+
+@media (max-width: 1200px)
+{
+  .container
+  {
+    flex-direction: column;
+    padding: 5%;
+    display: flex;
+  }
+  .container__child
+  {
+    flex-direction: column;
+    display: flex;
+  }
+
+  .container__child__leftbox
+  {
+    align-items: center;
+    gap: 5%;
+    flex-direction: column;
+  }
+
+  .container__child__rightbox
+  {
+    align-items: center;
+    padding: 2%;
+    gap: 2%;
+  }
+
+  .container__child__rectangle
+  {
+    width: 15rem;
+    height: 30rem;
+  }
+
+  .container__child__input 
+  {
+    height: auto;
+  }
+
+  .container__child__btns
+  {
+    margin-bottom: 2%;
+  }
+
+  .mag-bear
+  {
+    height: 14rem;
+    width: 11rem;
+  }
+
+}
