--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,22 @@ body {
 }
 
 .container__child__btns {
-    color: black;
+    color: #1A3636;
     justify-content: center;
     gap: 3.125rem;
     display: flex;
 }
 
+.container__child__btn {
+    width: 12.5rem;
+    height: 3.125rem;
+    font-size: 1.25rem;
+    background-color: #D6BD98;
+    border-radius: 1rem;
+}
+
 .container__child__texts {
-    color: black;
+    color: #1A3636;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -147,12 +155,12 @@ body {
 }
 
 .container__child__copybtn {
-    width: 13.25rem;
-    height: 4.563rem;
+    width: 12.5rem;
+    height: 3.125rem;
     font-size: 1.25rem;
     background-color: white;
-    border-radius: 24px;
-    border: 3px #1A3636;
+    border-radius: 1rem;
+    border: 2px solid #1A3636; /* Adiciona uma borda de 2px com a cor #1A3636 */
     visibility: hidden;
     pointer-events: none;
 }
@@ -238,7 +246,7 @@ body {
         font-size: 0.6rem;
       }
 
-      .container__child__rule {
+      .container__child__instruction {
         font-size: 0.7rem;
       }
     
